@@ -1,5 +1,7 @@
 package cn.com.vortexa.example.optimai;
 
+import cn.com.vortexa.bot_father.BotLauncher;
+import cn.com.vortexa.bot_father.anno.BotApplication;
 import cn.com.vortexa.bot_father.anno.BotMethod;
 import cn.com.vortexa.bot_father.anno.BotWSMethodConfig;
 import cn.com.vortexa.bot_father.bot.AutoLaunchBot;
@@ -8,16 +10,22 @@ import cn.com.vortexa.bot_father.service.BotApi;
 import cn.com.vortexa.common.constants.BotJobType;
 import cn.com.vortexa.common.dto.Result;
 import cn.com.vortexa.common.entity.AccountContext;
+import cn.com.vortexa.common.exception.BotInitException;
+import cn.com.vortexa.common.exception.BotStartException;
 
+import java.util.ArrayList;
 import java.util.List;
 
 /**
  * @author h30069248
  * @since 2025/3/24 17:14
  */
+@BotApplication(name = "optim_ai", configParams = {OptimAIBot.TWO_CAPTCHA_API_KEY})
 public class OptimAIBot extends AutoLaunchBot<OptimAIBot> {
 
     private static final String WS_CONNECT_URL = "wss://ws.optimai.network";
+    public static final String TWO_CAPTCHA_API_KEY = "two_captcha_api_key";
+    public static final String PASSWORD_KEY = "password";
 
     private final int WS_RECONNECT_INTERVAL_SECOND = 60 * 60 * 24;
 
@@ -41,6 +49,14 @@ public class OptimAIBot extends AutoLaunchBot<OptimAIBot> {
     }
 
     @BotMethod(
+            jobType = BotJobType.LOGIN
+    )
+    public Result login(AccountContext accountContext) throws Exception {
+        Result login = optimAIAPI.login(accountContext);
+        return login;
+    }
+
+    @BotMethod(
             jobType = BotJobType.WEB_SOCKET_CONNECT,
             intervalInSecond = WS_RECONNECT_INTERVAL_SECOND,
             bowWsConfig = @BotWSMethodConfig(
@@ -53,7 +69,18 @@ public class OptimAIBot extends AutoLaunchBot<OptimAIBot> {
     )
     public OptimAIWSClient buildKeepAliveWSClient(AccountContext accountContext) {
         OptimAIWSClient client = new OptimAIWSClient(accountContext, WS_CONNECT_URL);
-        client.set
+//        client.set
         return client;
+    }
+
+    public static void main(String[] args) throws BotStartException, BotInitException {
+        List<String> list = new ArrayList<>(List.of(args));
+
+        list.add("--vortexa.botKey=optimai_test");
+        list.add("--vortexa.customConfig.two_captcha_api_key=");
+        list.add("--vortexa.accountConfig.configFilePath=optimai_google.xlsx");
+        list.add("--add-opens java.base/java.lang=ALL-UNNAMED");
+
+        BotLauncher.launch(OptimAIBot.class, list.toArray(new String[0]));
     }
 }
